Fix overflow issues on mobile, improve mobile UI

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -18,14 +18,24 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  overflow: auto;
+
+  @media screen and (min-width: 425px) {
+    justify-content: flex-start;
+  }
 }
 
 .title {
   text-align: center;
   margin-top: 0;
-  margin: 120px 0 40px 0;
+  margin-bottom: 40px;
   font-size: 40px;
   font-weight: 700;
+
+  @media screen and (min-width: 425px) {
+    margin: 120px 0 40px 0;
+  }
 }
 
 .description {
